<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView
        android:layout_marginTop="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        />
    <TextView
        android:text="@string/alexa"
        android:textColor="@color/color_f4f4f4"
        android:textSize="20sp"
        android:layout_marginBottom="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/things_to_try"
        android:textSize="16sp"
        android:layout_marginBottom="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginStart="92dp"
        android:layout_marginEnd="92dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <FrameLayout
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/thing_try_dialog"
            >
            <TextView
                android:text="@string/things_try_text1"
                style="@style/ThingsTry"
                 />
        </FrameLayout>
        <FrameLayout
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/thing_try_dialog"
            >
            <TextView
                android:text="@string/things_try_text2"
                style="@style/ThingsTry" />
        </FrameLayout>
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/thing_try_dialog"
            >
            <TextView
                android:text="@string/things_try_text3"
                style="@style/ThingsTry" />
        </FrameLayout>
    </LinearLayout>
    <TextView
        android:gravity="center"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:text="@string/learn_more"
        />
</LinearLayout>