<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <LinearLayout
        android:layout_weight="2"
        android:layout_width="0dp"
        android:gravity="center"
        android:visibility="visible"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            />
        <TextView
            android:id="@+id/splash"
            android:text="@string/splash_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/splash_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/btn_login"
            android:text="@string/login_amazon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btn_cancel"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</merge>